--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,3 +1,12 @@
+.menu-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 51;
+}
+
 .menu {
   position: fixed;
   top: 2rem;
@@ -7,7 +16,7 @@
   max-width: 2000px;
   transition: transform 0.4s ease;
   will-change: transform;
-  z-index: 10;
+  z-index: 100;
 }
 
 .menu.hidden {
