--- a/src/components/ShoppingCart/ShoppingCart.css
+++ b/src/components/ShoppingCart/ShoppingCart.css
@@ -6,7 +6,7 @@
   height: 100svh;
   padding: 2rem;
   pointer-events: none;
-  z-index: 50;
+  z-index: 110;
 }
 
 .shopping-cart-container .cart-button {
